src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-99.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units grid=\")"
---
INVALID:
  items:
    - INVALID:
        loc: "#units grid="
        locs:
          directive: "#units"
        options:
          - INVALID:
              locs:
                option: grid
              option: GridNorthCorrection
            issues:
              - 0
        type: UnitsDirective
issues:
  - code: EMISSINGVALUE
    loc: ""
    message: Missing azimuth
    severity: Error
